# ntt-radix8-4096

./: .gitignore  CMakeLists.txt  README.md  bench.sh  bench_bfu8_full_parallel.sh  bench_bfu8_mult_parallel.sh  bench_bfu8_partial_parallel.sh  bench_bfu8_sequential.sh  bench_mul_only.sh  bench_par4.sh  bench_results.csv  bench_results_bfu8_full_parallel.csv  bench_results_bfu8_mult_parallel.csv  bench_results_bfu8_sequential.csv
include/: bfu8.cuh  debug_snapshots.cuh  modutil.cuh  ntt_fused_s01.cuh  ntt_fused_s23.cuh  ntt_roots.hpp  ntt_twiddle_precompute.hpp
src/: bfu8_constants.cu  bfu8_host.hpp  main.cu  ntt_host.cu
